# geno-lang

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fix.md  mypy-tests.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  spec.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  preview_feedback.md
.github/workflows/: ci.yml  publish.yml  release-gate.yml  scheduled-quality.yml
analysis/: __init__.py  analyzer.py  demo.py  report_generator.py  statistics.py  visualizations.py
benchmark/: __init__.py  loader.py  runner.py  schema.py
benchmark/problems/: PROB-001.yaml  PROB-002.yaml  PROB-003.yaml  PROB-004.yaml  PROB-005.yaml  PROB-006.yaml  PROB-007.yaml  PROB-008.yaml  PROB-009.yaml  PROB-010.yaml  PROB-011.yaml  PROB-012.yaml  PROB-013.yaml  PROB-014.yaml  PROB-015.yaml  PROB-016.yaml  PROB-017.yaml  PROB-018.yaml  PROB-019.yaml  PROB-020.yaml  PROB-021.yaml  PROB-022.yaml  PROB-023.yaml  PROB-024.yaml  PROB-025.yaml  PROB-026.yaml  PROB-027.yaml  PROB-028.yaml  PROB-029.yaml  PROB-030.yaml  PROB-031.yaml  PROB-032.yaml  PROB-033.yaml  PROB-034.yaml  PROB-035.yaml  PROB-036.yaml  PROB-037.yaml  PROB-038.yaml  PROB-039.yaml  PROB-040.yaml  (+38 more)
benchmark/problems/apps/: APP-001.yaml  APP-002.yaml  APP-003.yaml  APP-004.yaml  APP-005.yaml  APP-006.yaml  APP-007.yaml  APP-008.yaml  APP-009.yaml  APP-010.yaml  APP-011.yaml  APP-012.yaml  APP-013.yaml  APP-014.yaml  APP-015.yaml
benchmarks/: RESULTS.md  run_benchmark.py
conformance/v0.4/: manifest.toml
conformance/v0.4/programs/: option_result.geno  (+10 more)
docs/: INDEX.md  MATURITY.md  REFERENCE_APPS.md  SCOPE.md  SUPPORTED_TARGETS.md  adr-shared-ir.md  llm-prompting.md  preview-program.md
docs/benchmark/: llm-correctness-methodology.md  llm-correctness-results.md  quality_criteria.md  results.md  validation-contract.md
docs/deploy/: browser.md  cli.md  hosted.md
docs/design/: benchmark-v2.md  target-aware-check.md  tiered-testing.md
docs/guide/: first-app.md  getting-started.md  language-tour.md  tutorial-todo-app.md
docs/operations/: compatibility-policy.md  local-ci.md  monitoring-and-support.md  release-runbook.md  serious-beta-qualification.md
docs/proposals/: 0000-executable-entrypoint-exit-semantics.md  0000-template.md  README.md
docs/reference/: capabilities.md  common-pitfalls.md  embedding-api.md  filesystem.md  runtime-semantics.md
docs/runtime/: backend-contracts.md  execution-surface.md
docs/security/: focused-review-2026-03.md
docs/spec/: v0.2.md  v0.4.md
examples/: README.md  calculator.geno  colors.geno  csv_processor.geno  fibonacci.geno  monitoring_http_adapter.py  quicksort.geno  safe_divide.geno  shapes.geno  todo_app.geno  word_count.geno
examples/apps/: calculator.geno  notetaker.geno  tetris.geno
experiment/: README.md  __init__.py  config.example.yaml  config.frontier.yaml  config.sweep.yaml  llm_client.py  metrics.py  prompts.py  runner.py
geno/: __init__.py  __main__.py  _backend_fastpath.py  _cli_format.py  _darwin_resource.py  _definition_index.py  _js_runtime_support.js  _runtime_support.py  _serve.py  _version.py  api.py  ast_nodes.py  backend_contract.py  base_compiler.py  builtin_manifest.py  builtin_metadata.py  builtin_registry.py  builtin_specs.py  builtins.py  capabilities.py  compiler.py  constraints.py  dependency_graph.py  diagnostics.py  doc_generator.py  entrypoint.py  execution_limits.py  exhaustiveness.py  formatter.py  harness.py  init.py  interpreter.py  js_compiler.py  js_runtime_prelude.py  lexer.py  lockfile.py  lsp_cache.py  lsp_completions.py  lsp_diagnostics.py  lsp_server.py  (+29 more)
geno/cli/: __init__.py  _util.py  build.py  check.py  compile.py  constrain.py  docs.py  init.py  lsp.py  pkg.py  repl.py  run.py  serve.py  test.py  watch.py
geno/std/: DateTime.geno  List.geno  Map.geno  Math.geno  Option.geno  Path.geno  Result.geno  String.geno
geno/tests/: __init__.py  _script_runner.py  conftest.py  project_resolution_fixture_helpers.py  test_anytype_does_not_coerce.py  test_anytype_recovery_ratchet.py  test_api.py  test_app_mode.py  test_array.py  test_ast_nodes.py  test_async.py  test_audit_release_lock_script.py  test_backend_contracts.py  test_backend_parity.py  test_builtin_collection_limit.py  test_builtin_metadata.py  test_builtins.py  test_capabilities.py  test_check_selfhost_parity_script.py  test_ci_dx_ratchets_script.py  test_cli.py  test_cli_pkg.py  test_compiled_capabilities.py  test_compiled_io.py  test_compiler.py  test_compiler_hardening.py  test_comprehensions.py  test_conformance_runner.py  test_consolidated_findings.py  test_constraints.py  test_csv_toml.py  test_defaults.py  test_definition_index.py  test_dependency_graph.py  test_deploy_guides.py  test_diagnostic_taxonomy.py  test_differential_fuzzing.py  test_doc_generator.py  test_docs_snippets.py  test_e2e_multi_module.py  (+94 more)
scripts/: analyze_results.py  audit_release_lock.py  check_anytype_recovery.py  check_ci_dx_ratchets.py  check_selfhost_parity.py  check_version_alignment.py  local_ci.py  publish_benchmark_results.py  release-gate-templates.sh  release-gate-vscode.sh  release_gate_apps.py  run_conformance.py  run_experiment.py  security_bounty.py  smoke_clean_install.py  smoke_installed_geno.py  validate_benchmark.py  validate_builtin_parity.py  validate_dependencies.py  validate_spec.py  validate_supported_targets.py
selfhost/: Ast.geno  Interpreter.geno  Lexer.geno  Main.geno  Parser.geno  SCOPE.md  Tokens.geno  TypeChecker.geno  Types.geno  geno.toml
vscode-geno/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-geno/scripts/: check-node-version.js
vscode-geno/snippets/: geno.json
vscode-geno/src/: extension.ts  lspStatus.test.ts  lspStatus.ts  shellEscape.test.ts  shellEscape.ts
vscode-geno/syntaxes/: geno.tmLanguage.json
(+177 files in other folders)
